5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1834_1274.log
== TEST (2019-06-27 12:59:07) 
-- CODE:
from numpy import *
from numpy.linalg
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	b[0;i]= b[i]+1
print(b)
-- ERROR:
File "XXXX", line 2
    from numpy.linalg
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 12:59:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	b[0;i]= b[i]+1
print(b)
-- ERROR:
File "XXXX", line 6
    b[0;i]= b[i]+1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 12:59:39) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	b[0:i]= b[i]+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 13:00:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	b[i]= b[i]+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 13:02:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	b[i]= shape(b[i])+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 13:03:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	b[i]= shape(b)[i] + 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 13:05:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	for j in range(a):
		b[i,j] = b[i,j] + 1
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 13:25:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	for j in range(a):
		b[i,j] = min(i,j) + 1
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 13:26:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	for j in range(a):
		b[i,j] = min(i,j) + 1
		print(min(i,j))

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 13:28:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	for j in range(a):
		b[i,j] = i + 1
		print(min(i,j))

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 13:28:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	for j in range(a):
		b[i,j] = i + 1
print(b)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 13:39:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	for j in range(a):
		b[i,j] = min(i,j) + 1
print(b)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 13:40:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = int(input("digite: "))
b=zeros((a,a), dtype=int)
for i in range(a):
	for j in range(a):
		b[i,j] = min(i,j) + 1
print(b)

		
-- EXECUTION TIME:
1.19864
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
